# Django-Chat

./: .gitignore  README.md  pyproject.toml
account/: forms.py  urls.py  views.py
auth_users/: views.py
auth_users/templates/: login.html  register_user.html
chat/: consumers.py  urls.py  views.py
chat/templates/: chat.html
chat/templates/chat/: index.html  room.html
root/: asgi.py  settings.py  urls.py
templates/: base.html
templates/account/: login.html  register.html
templates/chat/: index.html
